--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -1,6 +1,6 @@
 .pokemon-card {
   width: 100%;
-  max-width: 22rem; /* Previous  max-width: 26rem; */
+  max-width: 22rem; /* Adjusted max-width */
   margin: 0 auto;
   border: 1px solid hsl(var(--border));
   border-radius: var(--radius);
@@ -13,12 +13,6 @@
   justify-content: space-between;
   gap: 0.25rem;
   margin: 0.75rem; 
-}
-
-.pokemon-card h2 {
-  /* font-size: 1.125rem; */ /* Previous font-size */
-  /* font-weight: 600; */ /* Previous font-weight */
-  /* font-weight was commented out completely in the new version */
 }
 
 .pokemon-card h2 a {
@@ -34,7 +28,7 @@
 }
 
 .pokemon-card > div:first-child img {
-  width: 100%; /* Previous width: 4rem */
+  width: 100%;
   max-width: 4rem;
   height: auto;
   margin: auto 0;
@@ -43,17 +37,17 @@
 
 .pokemon-card > div:nth-child(2):has(*) {
   position: relative;
-  padding: 0.5rem; /* Previous padding: 0.5rem 1rem */
+  padding: 0.5rem;
   padding-top: 0.5rem;
 }
 
 .pokemon-card > div:nth-child(2) > a > img {
   display: block;
-  max-width: 18rem; /* Previous width: 13rem */
-  min-height: 18rem; /* Previous height: 13rem */
-  width: 100%; /* Resize image to the container's full width */
+  max-width: 18rem;
+  height: auto; /* Maintain aspect ratio */
+  width: 100%; /* Ensure it fills the container */
   margin: 0 auto 0.5rem;
-  object-fit: contain;
+  object-fit: contain; /* Contain image within bounds */
 }
 
 .pokemon-card > div:nth-child(2) > div {
@@ -84,7 +78,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  padding: 0.5rem; /* Previous padding: 0.5rem 1rem */
+  padding: 0.5rem;
   font-size: 0.875rem;
 }
 
