--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border: 1px solid hsl(var(--border));
   border-radius: var(--radius);
-  background-color: rgb(var(--custom-card-background)); /* Custom card background */
+  background-color: hsl(var(--card));
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -39,8 +39,6 @@
   position: relative;
   padding: 0.5rem;
   padding-top: 0.5rem;
-  /* Ensure the second child has the custom card background */
-  background-color: rgb(var(--custom-card-background)); 
 }
 
 .pokemon-card > div:nth-child(2) > a > img {
@@ -50,10 +48,9 @@
   width: 100%; /* Ensure it fills the container */
   height: 100%; /* Ensure it fills the container */
   margin: 0 auto 0.5rem;
-  border-radius: 0.5rem;
   object-fit: contain; /* Contain image within bounds */
-  /* Apply the custom image background */
   background-color: rgb(var(--custom-image-background)); 
+  border-radius: 0.5rem;
 }
 
 .pokemon-card > div:nth-child(2) > div {
