--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,9 +52,11 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-   /* Custom variables for light mode */
---custom-card-background: 245, 247, 250; /* Soft, premium bluish-gray */
---custom-image-background: 200, 220, 245; /* Softer bluish background */
+    /* Custom variables for light mode */
+    --custom-card-background: 245, 247, 250;
+    /* Soft, premium bluish-gray */
+    --custom-image-background: 200, 220, 245;
+    /* Softer bluish background */
 
   }
 
