--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border: 1px solid hsl(var(--border));
   border-radius: var(--radius);
-  background-color: rgb(var(--custom-card-background));
+  background-color: hsl(var(--card));
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -49,7 +49,7 @@
   height: 100%; /* Ensure it fills the container */
   margin: 0 auto 0.5rem;
   object-fit: contain; /* Contain image within bounds */
-  background-color: rgb(var(--custom-image-background)); 
+  background-color: hsl(var(--custom-image-background)); 
   border-radius: 0.5rem;
 }
 
