--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,8 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --custom-card-background: 221, 39%, 11%;
+    --custom-image-background: 215, 28%, 17%;
 
 
   }
@@ -53,7 +55,6 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
     --custom-card-background: 245, 247, 250;
-    /* Soft, premium bluish-gray */
     --custom-image-background: 212 42% 94%; /* Softer blue for images */
   }
 
@@ -82,11 +83,6 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    /* Custom variables for dark mode */
-    --custom-card-background: 0,0,0;
-    /* Equivalent to bg-slate-950 */
-    --custom-image-background: 220 28% 19%;
-    /* Equivalent to bg-slate-800 */
   }
 }
 
