--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border: 1px solid hsl(var(--border));
   border-radius: var(--radius);
-  background-color: hsl(var(--card));
+  background-color: hsl(var(--custom-card-background));
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
