--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -1,93 +1,92 @@
 .pokemon-card {
-  min-width: fit-content;
   width: 100%;
-  max-width: 19rem; /* Adjusted max-width */
+  max-width: 19rem;
   margin: 0 auto;
   border: 1px solid hsl(var(--border));
   border-radius: var(--radius);
   background-color: hsl(var(--custom-card-background));
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
+  flex-grow: 1;
 }
 
-.pokemon-card > div:first-child:has(*) {
+.pokemon-card>div:first-child:has(*) {
   display: flex;
   justify-content: space-between;
-  gap: 0.25rem;
-  margin: 0.75rem; 
+  gap: .25rem;
+  margin: .75rem
 }
 
 .pokemon-card h2 a {
   text-decoration: none;
-  color: inherit;
+  color: inherit
 }
 
-.pokemon-card > div:first-child > div {
+.pokemon-card>div:first-child>div {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  gap: 0.25rem;
+  gap: .25rem
 }
 
-.pokemon-card > div:first-child img {
+.pokemon-card>div:first-child img {
   width: 100%;
   max-width: 4rem;
   height: auto;
   margin: auto 0;
-  border-radius: 0.25rem;
+  border-radius: .25rem
 }
 
-.pokemon-card > div:nth-child(2):has(*) {
+.pokemon-card>div:nth-child(2):has(*) {
   position: relative;
-  padding: 0.5rem;
-  padding-top: 0.5rem;
+  padding: .5rem
 }
 
-.pokemon-card > div:nth-child(2) > a > img {
+.pokemon-card>div:nth-child(2)>a>img {
   display: block;
   max-width: 18rem;
-  max-height: 18rem; /* Maintain aspect ratio */
-  width: 100%; /* Ensure it fills the container */
-  height: 100%; /* Ensure it fills the container */
-  margin: 0 auto 0.5rem;
-  object-fit: contain; /* Contain image within bounds */
-  background-color: hsl(var(--custom-image-background)); 
-  border-radius: 0.5rem;
+  max-height: 18rem;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto .5rem;
+  object-fit: contain;
+  background-color: hsl(var(--custom-image-background));
+  border-radius: .5rem
 }
 
-.pokemon-card > div:nth-child(2) > div {
+.pokemon-card>div:nth-child(2)>div {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  bottom: 0.5rem;
+  bottom: .5rem;
   left: 1rem;
   right: 1rem;
-  font-size: 0.875rem;
+  font-size: .875rem
 }
 
-.pokemon-card > div:nth-child(2) > div:nth-child(1) {
-  text-align: left;
+.pokemon-card>div:nth-child(2)>div:first-child {
+  text-align: left
 }
 
-.pokemon-card > div:nth-child(2) > div:nth-child(2) > span:last-child {
+.pokemon-card>div:nth-child(2)>div:nth-child(2)>span:last-child {
   text-align: right;
-  color: hsl(var(--muted-foreground));
+  color: hsl(var(--muted-foreground))
 }
 
-.pokemon-card > div:nth-child(2) a {
+.pokemon-card>div:nth-child(2) a {
   text-decoration: none;
-  border-bottom: 2px solid hsl(var(--border));
+  border-bottom: 2px solid hsl(var(--border))
 }
 
-.pokemon-card > div:last-child:has(*) {
+.pokemon-card>div:last-child:has(*) {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-  padding: 0.5rem;
-  font-size: 0.875rem;
+  gap: .25rem;
+  padding: .5rem;
+  font-size: .875rem
 }
 
-.pokemon-card > div:last-child p {
+.pokemon-card>div:last-child p {
   display: flex;
   justify-content: space-between;
-  margin: 0;
+  margin: 0
 }
