cafix card image structure issue

--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -6,7 +6,7 @@
   border-radius: var(--radius);
   background-color: hsl(var(--custom-card-background));
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
-  flex-grow: 1;
+  /* flex-grow: 1; */
 }
 
 .pokemon-card>div:first-child:has(*) {
@@ -43,10 +43,10 @@
 
 .pokemon-card>div:nth-child(2)>a>img {
   display: block;
-  max-width: 18rem;
-  max-height: 18rem;
-  width: 100%;
-  height: 100%;
+  width: 18rem;
+  height: auto;
+  /* width: 100%;
+  height: 100%; */
   margin: 0 auto .5rem;
   object-fit: contain;
   background-color: hsl(var(--custom-image-background));
