--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -13,10 +13,10 @@
   display: flex;
   justify-content: space-between;
   gap: .25rem;
-  margin: .75rem
+  margin: 0.25rem 0.5rem;
 }
 
-.pokemon-card h2 a {
+.pokemon-card h3 a {
   text-decoration: none;
   color: inherit
 }
@@ -30,7 +30,7 @@
 
 .pokemon-card>div:first-child img {
   width: 100%;
-  max-width: 4rem;
+  max-width: 3.5rem;
   height: auto;
   margin: auto 0;
   border-radius: .25rem
@@ -38,13 +38,14 @@
 
 .pokemon-card>div:nth-child(2):has(*) {
   position: relative;
-  padding: .5rem
+  padding: .25rem
 }
 
 .pokemon-card>div:nth-child(2)>a>img {
   display: block;
   width: 18rem;
   height: auto;
+  max-height: 18rem;
   /* width: 100%;
   height: 100%; */
   margin: 0 auto .5rem;
