--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -16,18 +13,16 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
-
 @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
+     --card: 178 39% 96%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
@@ -50,14 +45,15 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --custom-card-background: 245, 247, 250;
-    --custom-image-background: 212 42% 94%; /* Softer blue for images */
+    --custom-card-background: 135 63% 97%;
+    --custom-image-background: 212 42% 94%;
+    --custom-image-sprite-background: 145 47% 76%;
+    --custom-image-sprite-border: 160 10% 80%; 
   }
-
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
+    --card:288 0% 8%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
@@ -71,7 +67,7 @@
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
+    --border: 0 0% 20.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
     --chart-1: 220 70% 50%;
@@ -79,16 +75,16 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --custom-card-background: 221, 39%, 11%;
+    --custom-card-background: 288 0% 16%;
     --custom-image-background: 217, 19%, 27%;
+    --custom-image-sprite-background: 134 20% 43%; 
+  --custom-image-sprite-border: 160 10% 30%;
   }
 }
-
 @layer base {
   * {
     @apply border-border;
   }
-
   body {
     @apply bg-background text-foreground;
   }
